--- a/configs/3b.yml
+++ b/configs/3b.yml
@@ -1,10 +1,9 @@
 run:
-    restore_from: continue
-    visualize: append
+    restore_from: overwrite
     do: ['train']
     gpu_id: 0
 log:
-    project: montero_model_rep
+    project: simple_betavae
     group: betavae_shapes3d
     wandb_mode: run
     level: info
@@ -15,18 +14,16 @@ train:
     epochs: 60
     lr: 0.0001
     batch_size: 64
-    checkpoint_every: 10
-    checkpoint_first: 1
-    loss: betavae
+    checkpoint_every: 64
+    checkpoint_first: 63
+    loss: factorizedsupportvae
     rec_dist: bernoulli
 betavae:
     beta: 16
     log_components: False
 model:
     name: vae_montero_small
-constraints:
-    file: constraints/avail_correlations.yaml:shapes3d_single_1_01
 vae_locatello:
     latent_dim: 10
 eval:
-    batch_size: 64
+    batch_size: 256
